--- a/Notebook 0- Usar Jupyter.ipynb
+++ b/Notebook 0- Usar Jupyter.ipynb
@@ -49,7 +49,10 @@
    "cell_type": "markdown",
    "id": "394b4dce",
    "metadata": {},
-   "source": []
+   "source": [
+    "55\n",
+    "no a pasado na "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -113,10 +116,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e67a09c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "programa terminado\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(3):\n",
     "    print(i)\n",
@@ -142,6 +156,18 @@
     "Debajo tienes dos celdas, que todavía no están \"ejecutadas\". Por lo tanto, en el texto se ven los códigos *markdown*.  \n",
     "Ejecutar es *interpretar* el código para producir el resultado deseado. Colócate sobre esas celdas, y pulsa a la vez las teclas **Control** y **Enter** (en realidad puedes pulsar primero Ctrl, y sin soltarla pulsar Enter después)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89272afc",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84854130",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -233,11 +259,35 @@
     "\n",
     "Cuando hayas terminado, guarda este cuaderno (está en la carpeta *Documentos*, si todo lo has hecho bien), y súbelo a Moodle."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4e335cb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num1 = 5\n",
+    "num2 = 3\n",
+    "\n",
+    "num1+num2"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -251,7 +301,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
   }
  },
  "nbformat": 4,
