he terminado el notebook 1

--- a/Notebook 1 - tipos de datos.ipynb
+++ b/Notebook 1 - tipos de datos.ipynb
@@ -672,7 +672,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Escribe aquí debajo tu código:\n"
+    "# Escribe aquí debajo tu código:\n",
+    "a=5\n",
+    "b=7\n",
+    "c=8\n",
+    "(a+b>c) or (a+b>c)\n",
+    "(a+b>c) and (a+b>c)"
    ]
   },
   {
@@ -841,7 +846,8 @@
    },
    "outputs": [],
    "source": [
-    "# Ejercicio 1"
+    "# Ejercicio 1\n",
+    "\"hola\",\" \",\"que tal\""
    ]
   },
   {
