--- a/Notebook 2- Refuerzo de Variables.ipynb
+++ b/Notebook 2- Refuerzo de Variables.ipynb
@@ -34,12 +34,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d491f2bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "type(numero)"
+    "type(15)"
    ]
   },
   {
@@ -89,16 +100,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "66aef71a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No puedes sacarte el carnet de conducir.\n"
+     ]
+    }
+   ],
    "source": [
     "# copia en esta celda el programa de ejemplo de arriba\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "edad = int(input(\"Escribe tu edad: \"))\n",
+    "if edad < 18:\n",
+    "    print(\"No puedes sacarte el carnet de conducir.\")\n",
+    "if edad >= 18:\n",
+    "    print(\"Puedes sacarte el carnet de conducir.\")"
    ]
   },
   {
@@ -137,11 +157,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "4ef5d3ff",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No puedes sacarte el carnet de conducir.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Preguntamos al usuario su edad\n",
+    "edad = int(input(\"Escribe tu edad: \"))\n",
+    "\n",
+    "#Ahora comparamos lo que ha metido el usuario con la mayoría de edad, que es 18. Primero vemos si es menor.\n",
+    "if edad < 18:\n",
+    "    print(\"No puedes sacarte el carnet de conducir.\") # Se imprime el mensaje correspondiente a ser menor\n",
+    "#La comparación siguiente es para ver si es mayor o igual que 18.\n",
+    "if edad >= 18:\n",
+    "    print(\"Puedes sacarte el carnet de conducir.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -342,11 +380,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8ca7d9ba",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(7)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -523,11 +574,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "325adb39",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(\"hola\"))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -541,11 +602,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "59b47927",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (802280407.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[11], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(len(\"hola\")\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(\"hola\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -604,7 +676,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -618,7 +690,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
   }
  },
  "nbformat": 4,
